--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,19 @@
 [package]
 name = "tiny-dfr"
-version = "0.3.6"
+version = "0.4.0-omarchy"
 edition = "2021"
 license = "MIT AND Apache-2.0"
-description = "The most basic dynamic function row daemon possible"
-homepage = "https://github.com/AsahiLinux/tiny-dfr"
-repository = "https://github.com/AsahiLinux/tiny-dfr.git"
+description = "Dynamic function row daemon for Apple MacBook Touch Bar - Omarchy fork with enhanced configuration and suspend/resume support"
+homepage = "https://github.com/artjsalina5/tiny-dfr"
+repository = "https://github.com/artjsalina5/tiny-dfr"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cairo-rs = { version = "0.20", default-features = false, features = ["freetype", "png"] }
+cairo-rs = { version = "0.20", default-features = false, features = [
+  "freetype",
+  "png",
+] }
 librsvg-rebind = "0.1"
 drm = "0.14"
 anyhow = "1"
